--- a/topografiya/templates/show.html
+++ b/topografiya/templates/show.html
@@ -603,7 +603,7 @@
                                             <div class="file-bottom ">
                                                 <h6>11 АКТ комерал назорат далолатномаси</h6>
                                                 <p>Ознакомиться с файлом отправки</p>
-                                                <button class="btn btn-primary w-100 m-t-10">Кўриш</button>
+                                                <button class="btn btn-primary w-100 m-t-10"><a href="#" id="doing_akt_komeral_file" object-id="{{ workerobject.object.id }}" class="text-white"> Кўриш</a></button>
                                             </div>
                                         </li>
                                         {% if reports %}
@@ -722,7 +722,7 @@
             processData: false,
 
             success: function (result){
-                window.open('/static/files/program_work_file.pdf','_blank');
+                window.open('/static/files/program-work/program_work_file.pdf','_blank');
 {#                var link = document.createElement('a');#}
 {#                link.href = "/static/files/file.pdf";#}
 {#                link.download = "file_" + new Date() + ".pdf";#}
@@ -739,6 +739,32 @@
     });
 </script>
 
+<script type="text/javascript">
+    $(document).on('click',"#doing_akt_komeral_file",function(){
+        var data = new FormData();
+        data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
+        data.append("data-id", $(this).attr('object-id'));
+        event.preventDefault()
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'doing_akt_komeral_file' %}',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+
+            success: function (result){
+                window.open('/static/files/akt-komeral/akt_komeral.pdf','_blank');
+            },
+
+            error: function(){
+              alert('Serverga yubara olmaymiz !! ');
+            }
+
+        });
+
+    });
+</script>
 
 <script>
     $("#confirm_print2").click(function(event) {
