--- a/topografiya/templates/worker/polevoy_work_doing.html
+++ b/topografiya/templates/worker/polevoy_work_doing.html
@@ -84,7 +84,7 @@
                           <a href="/{{ work.object.pdowork.smeta }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i> Смета файли билан танишиш</h6></a>
                       </div>
                        <div class="col-md-12">
-                          <a href="#" target="_blank" class="file" data-id="{{ programwork.object.id }}"><h6 class=""> <i class="fa fa-file-word-o"></i> Илова файли билан танишиш</h6></a>
+                          <a href="#" target="_blank" class="file" data-id="{{ work.object.id }}"><h6 class=""> <i class="fa fa-file-word-o"></i> Илова файли билан танишиш</h6></a>
                       </div>
                       {% if programwork %}
                             {% if programwork.status == 4 %}
